# circus-website

./: .gitignore  Dockerfile.dev  Dockerfile.nuxt  Dockerfile.pocketbase  README.md  app.vue  docker-compose.dev.yml  docker-compose.yml  example.env  manage.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: nuxthub.yml
backend/: .gitignore  bun.lockb  data.db  package-lock.json  package.json  pb_schema.json
backend/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
backend/pb_hooks/: send-mail.pb.js
backup/: nuxt.config.ts  package.json  tailwind.config.js
backup/pages/: index.vue
components/gallery/: GalleryCarousel.vue  GalleryFull.vue
components/global/: SectionHeading.vue
components/home/: HomeAboutSection.vue  HomeContactSection.vue  HomeJumbotron.vue  HomeProgramOverview.vue
components/layout/: LayoutFooter.vue  LayoutNavbar.vue
frontend/: .gitignore  Dockerfile  Dockerfile.dev  app.vue  bun.lockb  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/layouts/: default.vue
layouts/: default.vue
nuxt/: bun.lockb  nuxt.config.ts  package.json  tailwind.config.ts
oldtillianer/: README.md
ottilianer/: Dockerfile  bun.lockb  manage.py  nuxt.config.ts  package.json  tailwind.config.ts
pages/: gallery.vue
plugins/: pocketbase.ts
pocketbase/: pb_schema.json
pocketbase-data/: data.db  data.db-shm  data.db-wal  logs.db  logs.db-shm  logs.db-wal
server/: pocketbase.ts
(+998 files in other folders)
