[tool.poetry]
name = "ottilianer-v2"
version = "0.1.0"
description = ""
authors = ["Leo Gall <gall.dev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
django-cotton = "^1.1.1"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.15.0"
django-htmx = "^1.19.0"
whitenoise = "^6.7.0"
python-dotenv = "^1.0.1"
django-jazzmin = "^3.0.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
black = "^24.8.0"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"
faker = "^26.1.0"
pytest-env = "^1.1.3"
freezegun = "^1.5.1"
pylint = "^3.2.6"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pytest_env]
DJANGO_SECRET_KEY = "RtcPToOOZ82erjag0zAVAQ3mmha9MrTx"
DJANGO_ALLOWED_HOSTS = "localhost,example.com"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
